cluster/transaction-vs-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: transaction
spec:
  hosts:
    - transaction
  http:
    - match:
        - uri:
            prefix: /api/v1/transaction
      rewrite:
        uri: /api/v1/transaction
      route:
        - destination:
            host: transaction
            port:
              number: 30002
      fault:
        delay:
          fixedDelay: 500ms
          percentage:
            value: 10
